--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>ZeburG</title>
     <meta charset='UTF-8'>
     <link rel="icon" href="/favicon.ico">
+    <link rel="yandex-tableau-widget" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
